# portmanager

./: .gitignore  Cargo.toml  Interface Document.md  README.md  TODO.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: docs-pages.yml  mainline-acceptance.yml
apps/controller/: package.json
apps/web/: package.json
crates/portmanager-agent/: Cargo.toml
crates/portmanager-agent/src/: main.rs
crates/portmanager-agent/tests/: agent_cli.rs
crates/portmanager-cli/: Cargo.toml
crates/portmanager-cli/src/: main.rs
crates/portmanager-cli/tests/: batch_operations_cli.rs  host_rule_policy_cli.rs  operation_get_cli.rs
docs-site/: content-map.js  index.md  package.json  pnpm-lock.yaml
docs-site/.vitepress/: config.ts
docs-site/data/: docs.ts  milestone-confidence-progress.ts  review-pack.ts  roadmap.ts
docs-site/en/: index.md
docs-site/zh/: index.md
docs/architecture/: portmanager-agent-bootstrap.md  portmanager-contract-strategy.md  portmanager-v1-architecture.md
docs/brainstorms/: 2026-04-16-portmanager-mainline-progress-and-next-steps-requirements.md  2026-04-17-portmanager-m2-confidence-history-sync-requirements.md  2026-04-17-portmanager-m2-confidence-progress-page-requirements.md  2026-04-17-portmanager-m2-confidence-readiness-requirements.md  2026-04-17-portmanager-m2-confidence-review-signal-requirements.md  2026-04-17-portmanager-m2-confidence-routine-requirements.md  2026-04-19-portmanager-m2-confidence-promotion-countdown-requirements.md  2026-04-20-portmanager-m2-confidence-promotion-ready-wording-requirements.md  2026-04-20-portmanager-m2-confidence-promotion-review-helper-requirements.md  2026-04-20-portmanager-m2-confidence-review-digest-requirements.md  (+16 more)
docs/specs/: portmanager-docs-site-architecture.md  (+9 more)
(+266 files in other folders)
