[package]
name = "portmanager-agent"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "=0.3.44", features = ["formatting"] }

[dev-dependencies]
serde_json = "1.0.149"
tempfile = "3.20.0"
