[package]
name = "portmanager-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "portmanager"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "env"] }
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
serde_json = "1.0.145"
